Section 46 - fix broken BeerController tests